--- a/index.css
+++ b/index.css
@@ -13,9 +13,9 @@ h1
 {
 	text-align: center;
 	font-family: Bookman, Georgia, Verdana, Arial, sans-serif;
-	color: blue;
-	font-size: 32pt;
-	line-height: 18pt;
+	color: rgb(128, 179, 255);
+	font-size: 40pt;
+	line-height: 15pt;
 	text-shadow: 4px 3px white;
 }
 /* In the first heading, I added various fonts to display here, just in case the primary font is unavailable, there are other stunning fonts to enjoy. */
@@ -30,9 +30,10 @@ h2
 
 h3
 { 
+	color: rgb(236, 236, 19);
 	font-size: 16pt;
 	line-height: 10pt;
-	color: rgb(0, 245, 245);
+	color: rgb (0, 245, 245);
 }
 
 .image
@@ -44,13 +45,18 @@ h3
 .center
 {
 	text-align: center;
-	font-size: 14pt;
+	font-size: 17pt;
 }
 
 p
 {
 	text-align: justify;
-	font-size: 13pt;
+	font-size: 14pt;
+}
+
+ul
+{
+	font-size: 15pt;
 }
 
 .list
