--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body
 {
 	font-family: Georgia, sans-serif;
 	color: white;
-	background-image: url("colourful.jpg");
+	background-image: url("background.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
@@ -25,7 +25,7 @@ h2
 	color: rgb(77, 179, 179);
 	font-size: 24pt; 
 	line-height: 11pt;
-	font-family: Verdana;
+	font-family: Verdana, Georgia, serif;
 }
 
 h3
@@ -42,10 +42,27 @@ h3
 	margin: 0 auto;
 }
 
+.images
+{
+    display: block;
+	margin: 0 auto;
+    border: 1px solid;
+}
+
 .center
 {
 	text-align: center;
 	font-size: 17pt;
+}
+
+a:link
+{
+    color: rgb(223, 32, 32);
+}
+
+a:visited
+{
+    color: lightsteelblue;
 }
 
 p
