--- a/index.css
+++ b/index.css
@@ -42,11 +42,11 @@ h3
 	margin: 0 auto;
 }
 
-#images
+.images
 {
-    display: block;
+	display: block;
 	margin: 0 auto;
-    border: 1px solid;
+	border: 1px solid;
 }
 
 .center
